Bugfix in chat app allowing to send blank whitespaces on keypress

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -23,6 +23,7 @@ nav{
         margin-right: 5px;
         float: left;
         margin-right: 30px;
+        border:0;
     }
     .AppButton:hover{
         cursor: pointer;
